# wasm-fingerprint

./: .env.example  .env.production  .gitignore  ADMIN_SETUP.md  CLAUDE.md  ENV_DOCUMENTATION.md  HEROKU_DATABASE_INFO.md  PROJECT_STRUCTURE.md  README.md  app.js  app.json  entropy-analyzer.js  fingerprint-matcher.js  heroku_test.db  package-lock.json  package.json  server-old.js  server.js  test-fingerprint-matcher.js  test-port-contention.html  test-wasm-benchmark.html  test.html
.context/: fingerprint-matching-system.md  intelligent-matching-system.md  system-architecture.md
archive/: build-wasm.sh
archive/tests/: test_stats.py
config/: index.js
database/: database.js  schema.sql
entropy-analyzer/: Cargo.toml
entropy-analyzer/src/: main.rs
public/: config.js  fingerprint-client.js  help.html  high-precision-timer.js  index.html  precise-benchmark.html  test-dashboard.html  timer-worker.js  wasm-benchmark-precise.js
public/pkg/: package.json  wasm_fingerprint.d.ts  wasm_fingerprint.js  wasm_fingerprint_bg.wasm  wasm_fingerprint_bg.wasm.d.ts
scripts/: deploy-heroku.sh  setup-heroku-env.sh
src/: README.md
src/controllers/: admin.controller.js  fingerprint.controller.js  health.controller.js
src/middleware/: auth.middleware.js  security.middleware.js
src/routes/: admin.routes.js  fingerprint.routes.js  health.routes.js  index.js
src/services/: fingerprint.service.js  log.service.js  session.service.js
wasm-fingerprint/: Cargo.toml  benchmark.wat
wasm-fingerprint/src/: audio_fingerprint.rs  canvas_fingerprint.rs  dom_utils.rs  hardware_benchmarks.rs  lib.rs  port_contention.rs  utils.rs  wasm_port_benchmark.rs  webgl_fingerprint.rs
(+3 files in other folders)
